Use ArrayList in WpEQSequenceGenerator